--- a/kontakta-oss/index.html
+++ b/kontakta-oss/index.html
@@ -303,7 +303,7 @@
 	<section id="intro_header">
 	<div class="intro_header_wrap header_map_wrap  ">
 		<div class="intro_header_style_map">
-			<p class="swm_google_map"><iframe style="width: 100%" width="" height="400" src="https://maps.google.com/maps?q=Annedalsv%C3%A4gen+9,+Lund,+Sweden&amp;hl=sv&amp;ie=UTF8&amp;sll=40.714346,-74.005966&amp;sspn=0.132326,0.264187&amp;hnear=Annedalsv%C3%A4gen+9,+227+64+Lund,+Sweden&amp;t=m&amp;z=16&amp;iwloc=near&amp;output=embed"></iframe>
+			<p class="swm_google_map"><iframe style="width: 100%" width="" height="400" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17988.06212361267!2d13.21720541564906!3d55.697545212391425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465397a6e7026cb3%3A0x3a02df19f681f585!2sBl%C3%A5tungav%C3%A4gen%201%2C%20224%2075%20Lund!5e0!3m2!1ssv!2sse!4v1593932244307!5m2!1ssv!2sse"></iframe>
 			</p>
 			<div class="clear"></div>
 		</div>
@@ -316,7 +316,7 @@
 			<h1>Kontakta oss</h1>
 			<p>
 				WIGOT KONSULT AB<br />
-				Annedalsvägen 9, 227 64 Lund<br />
+				Blåtungavägen 1, 224 75 Lund<br />
 				Tel 046-38 51 30 / Fax 046-12 55 27
 			</p>
 		</div>
@@ -324,7 +324,7 @@
 			<h1>Hitta hit</h1>
 			<p>
 				Wigot Konsult Hittar du i västra Lund, vid Fjelierondellen (nära NovaLund och Mobilia).<br />
-				På Annedalsvägen 9, med goda parkeringsmöjligheter, är du välkommen att hälsa på oss.<br />
+				På Blåtungavägen 1, med goda parkeringsmöjligheter, är du välkommen att hälsa på oss.<br />
 				Vi sitter på översta våningen. På kartan ovan är kontoret markerat.
 			</p>
 		</div><div class="clear"></div>
@@ -425,7 +425,7 @@
 </section> <!-- #container End -->
 
     <section id="footer_copyright_info">
-		<p>WIGOT KONSULT AB / Annedalsvägen 9, 227 64 Lund / Tel 046-38 51 30 / Fax 046-12 55 27</p>
+		<p>WIGOT KONSULT AB / Blåtungavägen 1, 224 75 Lund / Tel 046-38 51 30 / Fax 046-12 55 27</p>
 </section>	
 
 <script type="text/javascript">
