--- a/projekt/skolor-och-forskolor/vipans-gymnasieskola-lund.html
+++ b/projekt/skolor-och-forskolor/vipans-gymnasieskola-lund.html
@@ -568,7 +568,7 @@ Vårt uppdrag&#58; Arkitekt, Bas-P
         </div>
     </div>
     <section id="footer_copyright_info">
-		<p>WIGOT KONSULT AB / Annedalsvägen 9, 227 64 Lund / Tel 046-38 51 30 / Fax 046-12 55 27</p>
+		<p>WIGOT KONSULT AB / Blåtungavägen 1, 224 75 Lund / Tel 046-38 51 30 / Fax 046-12 55 27</p>
 </section>	
 
 <script type="text/javascript">
