Uppdaterade kontakta oss. Nu återstår Anders, Leif, Lotta

--- a/kontakta-oss/index.html
+++ b/kontakta-oss/index.html
@@ -303,8 +303,7 @@
 	<section id="intro_header">
 	<div class="intro_header_wrap header_map_wrap  ">
 		<div class="intro_header_style_map">
-			<p class="swm_google_map"><iframe style="width: 100%" width="" height="400" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17988.06212361267!2d13.21720541564906!3d55.697545212391425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465397a6e7026cb3%3A0x3a02df19f681f585!2sBl%C3%A5tungav%C3%A4gen%201%2C%20224%2075%20Lund!5e0!3m2!1ssv!2sse!4v1593932244307!5m2!1ssv!2sse"></iframe>
-			</p>
+			<p class="swm_google_map"><iframe style="width: 100%" width="" height="400" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17988.06212361267!2d13.21720541564906!3d55.697545212391425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465397a6e7026cb3%3A0x3a02df19f681f585!2sBl%C3%A5tungav%C3%A4gen%201%2C%20224%2075%20Lund!5e0!3m2!1ssv!2sse!4v1593932244307!5m2!1ssv!2sse"></iframe></p>
 			<div class="clear"></div>
 		</div>
 		<div class="clear"></div>
@@ -327,7 +326,8 @@
 				På Blåtungavägen 1, med goda parkeringsmöjligheter, är du välkommen att hälsa på oss.<br />
 				Vi sitter på översta våningen. På kartan ovan är kontoret markerat.
 			</p>
-		</div><div class="clear"></div>
+		</div>
+		<div class="clear"></div>
 		<div class="clear"></div>
 		<br />
 		<br />
@@ -336,14 +336,21 @@
 		<div class="team_member_wrapper">
 			<div class="one_fourth other">
 				<div class="tm_style2">
-					<div class="tm_img"><img src="/content/uploads/C1DX8029.jpg" alt=""><div class="clear"></div></div><div class="tm_box_content">
-						<div class="member_name">Anders L Nilsson<span>Byggn.ingenjör / Illustratör</span></div><div class="tm_toggle">
-							<span class="tm_toggle_header"><i class="icon-plus-sign"></i><i class="icon-minus-sign"></i></span><div class="tm_box_sub_content">
+					<div class="tm_img"><img src="/content/uploads/C1DX8029.jpg" alt="">
+						<div class="clear"></div>
+					</div>
+					<div class="tm_box_content">
+						<div class="member_name">Anders L Nilsson<span>Byggn.ingenjör / Illustratör</span></div>
+						<div class="tm_toggle">
+							<span class="tm_toggle_header"><i class="icon-plus-sign"></i><i
+									class="icon-minus-sign"></i></span>
+							<div class="tm_box_sub_content">
 								<ul class="the_icons">
-									<li><i class="icon-phone"></i> 046-38 51 33 </li>
 									<li><i class="icon-phone"></i> 0705-38 51 34 </li>
-									<li><i class="icon-envelope"></i> <a href="mailto:anders@wigot.se">anders@wigot.se</a> </li>
-								</ul><div class="clear"></div>
+									<li><i class="icon-envelope"></i> <a
+											href="mailto:anders@wigot.se">anders@wigot.se</a> </li>
+								</ul>
+								<div class="clear"></div>
 							</div>
 						</div>
 					</div>
@@ -353,31 +360,21 @@
 		<div class="team_member_wrapper">
 			<div class="one_fourth other">
 				<div class="tm_style2">
-					<div class="tm_img"><img src="/content/uploads/C1DX8057.jpg" alt=""><div class="clear"></div></div><div class="tm_box_content">
-						<div class="member_name">Cecilia Runsten<span>Civilingenjör Väg &amp; Vatten</span></div><div class="tm_toggle">
-							<span class="tm_toggle_header"><i class="icon-plus-sign"></i><i class="icon-minus-sign"></i></span><div class="tm_box_sub_content">
-								<ul class="the_icons">
-									<li><i class="icon-phone"></i> 046-38 51 43 </li>
-									<li><i class="icon-phone"></i> 0705-38 51 79 </li>
-									<li><i class="icon-envelope"></i> <a href="mailto:cecilia@wigot.se">cecilia@wigot.se</a> </li>
-								</ul><div class="clear"></div>
-							</div>
-						</div>
+					<div class="tm_img"><img src="/content/uploads/C1DX8084.jpg" alt="">
+						<div class="clear"></div>
 					</div>
-				</div>
-			</div>
-		</div>
-		<div class="team_member_wrapper">
-			<div class="one_fourth other">
-				<div class="tm_style2">
-					<div class="tm_img"><img src="/content/uploads/C1DX8084.jpg" alt=""><div class="clear"></div></div><div class="tm_box_content">
-						<div class="member_name">Leif Hörberg<span>Arkitekt, Ombud</span></div><div class="tm_toggle">
-							<span class="tm_toggle_header"><i class="icon-plus-sign"></i><i class="icon-minus-sign"></i></span><div class="tm_box_sub_content">
+					<div class="tm_box_content">
+						<div class="member_name">Leif Hörberg<span>Arkitekt, Ombud</span></div>
+						<div class="tm_toggle">
+							<span class="tm_toggle_header"><i class="icon-plus-sign"></i><i
+									class="icon-minus-sign"></i></span>
+							<div class="tm_box_sub_content">
 								<ul class="the_icons">
-									<li><i class="icon-phone"></i> 046-38 51 42 </li>
 									<li><i class="icon-phone"></i> 0705-38 51 36 </li>
-									<li><i class="icon-envelope"></i> <a href="mailto:leif@wigot.se">leif@wigot.se</a> </li>
-								</ul><div class="clear"></div>
+									<li><i class="icon-envelope"></i> <a href="mailto:leif@wigot.se">leif@wigot.se</a>
+									</li>
+								</ul>
+								<div class="clear"></div>
 							</div>
 						</div>
 					</div>
@@ -387,39 +384,27 @@
 		<div class="team_member_wrapper">
 			<div class="one_fourth last">
 				<div class="tm_style2">
-					<div class="tm_img"><img src="/content/uploads/C1DX8001.jpg" alt=""><div class="clear"></div></div><div class="tm_box_content">
-						<div class="member_name">Lotta Sundström<span>Arkitekt SAR/MSA</span></div><div class="tm_toggle">
-							<span class="tm_toggle_header"><i class="icon-plus-sign"></i><i class="icon-minus-sign"></i></span><div class="tm_box_sub_content">
+					<div class="tm_img"><img src="/content/uploads/C1DX8001.jpg" alt="">
+						<div class="clear"></div>
+					</div>
+					<div class="tm_box_content">
+						<div class="member_name">Lotta Sundström<span>Arkitekt SAR/MSA</span></div>
+						<div class="tm_toggle">
+							<span class="tm_toggle_header"><i class="icon-plus-sign"></i><i
+									class="icon-minus-sign"></i></span>
+							<div class="tm_box_sub_content">
 								<ul class="the_icons">
-									<li><i class="icon-phone"></i> 046-38 51 34 </li>
 									<li><i class="icon-phone"></i> 0705-38 51 35 </li>
-									<li><i class="icon-envelope"></i> <a href="mailto:lotta@wigot.se">lotta@wigot.se</a> </li>
-								</ul><div class="clear"></div>
+									<li><i class="icon-envelope"></i> <a href="mailto:lotta@wigot.se">lotta@wigot.se</a>
+									</li>
+								</ul>
+								<div class="clear"></div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="clear"></div>
-		<div class="team_member_wrapper">
-			<div class="one_fourth other">
-				<div class="tm_style2">
-					<div class="tm_img"><img src="/content/uploads/C1DX8047.jpg" alt=""><div class="clear"></div></div><div class="tm_box_content">
-						<div class="member_name">Mia Gränse<span>Ekonom</span></div><div class="tm_toggle">
-							<span class="tm_toggle_header"><i class="icon-plus-sign"></i><i class="icon-minus-sign"></i></span><div class="tm_box_sub_content">
-								<ul class="the_icons">
-									<li><i class="icon-phone"></i> 046-38 51 35 </li>
-									<li><i class="icon-envelope"></i> <a href="mailto:mia@wigot.se">mia@wigot.se</a> </li>
-								</ul><div class="clear"></div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="clear"></div>
-
 		<div class="clear"></div>
 	</div> <!-- #content -->
 </section> <!-- #container End -->
